--- a/firebase/app/build.gradle
+++ b/firebase/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.codigonline.firebase"
+        applicationId "com.lestrades.firebase"
         minSdkVersion 28
         targetSdkVersion 30
         versionCode 1
